@@ -7,6 +7,7 @@
   * Require ActiveRecord greater than or equal to 2.1
   * Add functionality to optionally to store a node's :level_column to Tree theory
   * Typo
+  * Add example tables to documentation
 
 2009-06-15 - Sean Huber (shuber@huberry.com)
   * Tree accepts an array of order options
